--- a/junk/test/index.html
+++ b/junk/test/index.html
@@ -33,7 +33,27 @@
   Loading...
 </div>
 
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
 
 </body>
 </html>
+
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+  fetch("paper.md")
+    .then((response) => response.text())
+    .then((markdown) => {
+      // Convert Markdown to HTML using a basic Markdown parser (marked.js)
+      const htmlContent = marked.parse(markdown);
+
+      // Display the rendered content inside the #content div
+      document.getElementById("content").innerHTML = htmlContent;
+    })
+    .catch((error) => {
+      document.getElementById("content").innerHTML = "Error loading paper.md.";
+      console.error("Error fetching Markdown file:", error);
+    });
+});
+
+</script>
