--- a/papers.html
+++ b/papers.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic Papers</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-50">
     <!-- Navigation -->
     <nav class="border-b px-4 py-4 bg-white">
@@ -30,36 +32,15 @@
             <!-- Cards will be dynamically inserted here -->
         </div>
     </main>
-
+    <script src="js/papers.js"></script>
     <script>
-        const papers = [
-            {
-                title: "Beveridgean Phillips Curve",
-                description: "This paper builds a Beveridgean model of the Phillips curve. Prices respond to slack so the divine coincidence holds: prices are stable at full employment. The Phillips curve is kinked if wage cuts are more costly to producers than price hikes.",
-                date: "October 2024",
-                authors: "Pascal Michaillat, Emmanuel Saez"
-            },
-            {
-                title: "Modeling Migration-Induced Unemployment",
-                description: "This paper explains why a wave of in-migration reduces the employment rate of local workers, and why this reduction is larger in bad times. Yet, when the labor market is inefficiently tight, in-migration improves local welfare because it aids firms in recruiting.",
-                date: "October 2024",
-                authors: "Pascal Michaillat"
-            },
-            {
-                title: "u* = √uv: The Full-Employment Rate of Unemployment in the United States",
-                description: "This paper argues that in the United States the full-employment rate of unemployment (FERU) is the geometric average of the unemployment and vacancy rates. Between 1930 and 2024, the FERU averages 4.1% and is very stable.",
-                date: "September 2024",
-                authors: "Pascal Michaillat, Emmanuel Saez"
-            }
-        ];
-
         function createPaperCard(paper) {
             return `
-                <article class="bg-white rounded-lg shadow-sm p-6 hover:shadow-md transition-shadow"  onclick="openPaperDetails()">
+                <article class="bg-white rounded-lg shadow-sm p-6 hover:shadow-md transition-shadow cursor-pointer" onclick="openPaperDetails('${paper.url}')">
                     <h2 class="text-xl font-medium mb-4">${paper.title}</h2>
                     <p class="text-gray-600 mb-4">${paper.description}</p>
                     <div class="text-gray-500">
-                        ${paper.date} · ${paper.authors}
+                        ${paper.date} &middot; ${paper.authors}
                     </div>
                 </article>
             `;
@@ -69,13 +50,14 @@
             const container = document.getElementById('papers-container');
             container.innerHTML = papers.map(paper => createPaperCard(paper)).join('');
         }
-        function openPaperDetails() {
-            alert(`Opening details for:`);
-           
+
+        function openPaperDetails(url) {
+            window.location.href = url;
         }
 
         // Initial render
         renderPapers();
     </script>
 </body>
+
 </html>
