--- a/index.html
+++ b/index.html
@@ -12,26 +12,61 @@
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         Helvetica, Arial, sans-serif;
     }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .animate-fade-in {
+      opacity: 0;
+      animation: fadeInUp 0.6s ease-out forwards;
+    }
+
+    .delay-100 { animation-delay: 0.1s; }
+    .delay-200 { animation-delay: 0.2s; }
+    .delay-300 { animation-delay: 0.3s; }
+    .delay-400 { animation-delay: 0.4s; }
+
+    .social-link {
+      transition: transform 0.2s ease;
+    }
+    .social-link:hover {
+      transform: translateY(-2px);
+    }
+
+    .nav-tag {
+      transition: all 0.2s ease;
+    }
+    .nav-tag:hover {
+      transform: scale(1.05);
+    }
   </style>
 </head>
 
 <body class="bg-white min-h-screen">
   <main class="container mx-auto px-4 py-12 flex flex-col items-center text-center max-w-3xl">
-    <div class="relative w-36 h-36 md:w-40 md:h-40 mb-4">
+    <div class="relative w-36 h-36 md:w-40 md:h-40 mb-4 animate-fade-in">
       <img id="profile-img" alt="Profile picture" class="rounded-full object-cover w-full h-full" />
     </div>
 
-    <h1 id="name" class="text-3xl md:text-4xl font-bold mb-4"></h1>
+    <h1 id="name" class="text-3xl md:text-4xl font-bold mb-4 animate-fade-in delay-100"></h1>
 
-    <p id="description" class="text-base md:text-lg text-gray-600 mb-6 max-w-2xl"></p>
+    <p id="description" class="text-base md:text-lg text-gray-600 mb-6 max-w-2xl animate-fade-in delay-200"></p>
 
     <!-- Social Links -->
-    <div id="social-links" class="flex flex-wrap justify-center gap-4 mb-8">
+    <div id="social-links" class="flex flex-wrap justify-center gap-4 mb-8 animate-fade-in delay-300">
       <!-- Social links will be dynamically inserted here -->
     </div>
 
     <!-- Navigation Tags -->
-    <div id="navigation-tags" class="flex flex-wrap justify-center gap-2">
+    <div id="navigation-tags" class="flex flex-wrap justify-center gap-2 animate-fade-in delay-400">
       <!-- Navigation tags will be dynamically inserted here -->
     </div>
   </main>
@@ -68,7 +103,9 @@
 
       // Set name
       const nameElement = document.getElementById("name");
-      nameElement.textContent = about.name || "Unknown Name";
+      const [firstName, ...lastNameParts] = (about.name || "Unknown Name").split(" ");
+      nameElement.innerHTML = `<span class="font-bold">${firstName}</span> ${lastNameParts.join(" ")}`;
+
 
       // Set description
       const descriptionElement = document.getElementById("description");
@@ -81,7 +118,7 @@
         if (about[link.key]) {
           const a = document.createElement("a");
           a.href = about[link.key];
-          a.className = "text-gray-600 hover:text-black transition-colors";
+          a.className = "text-gray-600 hover:text-black transition-colors social-link";
           a.target = "_blank";
           a.rel = "noopener noreferrer"; // Security best practice
           a.innerHTML = `
@@ -99,7 +136,7 @@
         const a = document.createElement("a");
         a.href = `${tag.toLowerCase()}.html`;
         a.className =
-          "inline-block px-4 py-2 bg-gray-100 text-gray-800 rounded-full hover:bg-gray-200 transition-colors";
+          "inline-block px-4 py-2 bg-gray-100 text-gray-800 rounded-full hover:bg-gray-200 transition-colors nav-tag";
         a.textContent = tag;
         navigationTagsContainer.appendChild(a);
       });
