style(index.html): adjust responsive layout and spacing
Update the body and main container classes to improve responsiveness and spacing on different screen sizes

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   </style>
 </head>
 
-<body class="bg-white min-h-screen flex items-center justify-center">
-  <main class="container mx-auto px-4 flex flex-col items-center text-center max-w-3xl">
+<body class="bg-white min-h-screen md:flex md:items-center md:justify-center">
+  <main class="container mx-auto px-4 flex flex-col items-center text-center max-w-3xl py-8 md:py-0">
     <div class="relative w-36 h-36 md:w-40 md:h-40 mb-4 animate-fade-in">
       <img id="profile-img" alt="Profile picture" class="rounded-full object-cover w-full h-full" />
     </div>
