fix(papers.html): open paper details in new tab instead of same window
Change the behavior of the `openPaperDetails` function to open paper URLs in a new tab using `window.open(url, '_blank')` instead of navigating the current window. This improves user experience by allowing users to keep the current page open while viewing paper details.

--- a/papers.html
+++ b/papers.html
@@ -73,7 +73,7 @@
         // Handle opening paper details
         function openPaperDetails(url) {
             if (url) {
-                window.location.href = url;
+                window.open(url, '_blank');
             } else {
                 console.error('Paper URL is not provided.');
             }
